@@ -1,5 +1,9 @@
 package org.mmisw.ont;
 
+/**
+ * Some general info about an ontology.
+ * @author Carlos Rueda
+ */
 class Ontology {
 	
 	String id;
@@ -7,5 +11,15 @@ class Ontology {
 	String file_path;
 	
 	String filename;
+	
+	private String uri;
+
+	public String getUri() {
+		return uri;
+	}
+
+	public void setUri(String uri) {
+		this.uri = uri;
+	}
 
 }
