@@ -3,6 +3,11 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-11-01
+	- New param _versions to report versions of a requested mmiUri, ex:
+	    http://mmisw.org/ont/mmi/parameter/?_versions
+	
+	
 2008-10-30
 	 - Issue 14: "mysql db connection timeout error"
 	   http://code.google.com/p/mmisw/issues/detail?id=14
